--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-clippings",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
@@ -9,12 +9,14 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
   "devDependencies": {
     "@types/jest": "24.0.13",
+    "@types/lodash": "^4.14.134",
     "@types/node": "12.0.7",
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
