--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
+  "homepage": ".",
   "devDependencies": {
     "@types/jest": "24.0.13",
     "@types/lodash": "^4.14.134",
