build: Add More Icons

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,18 +5,25 @@
   "version": "0.0.1",
   "version_name": "0.0.1",
   "manifest_version": 2,
-  "default_locale": "zh",
   "author": "Steve Xu",
   "browser_action": {
-    "default_icon": "favicon.png",
+    "default_icon": "icon-48.png",
     "default_title": "My Clippings"
   },
   "homepage_url": "https://github.com/nusr/my-clippings",
-  "offline_enabled": "true",
+  "offline_enabled": true,
   "permissions": [
     "activeTab",
     "tabs"
   ],
+  "icons": {
+    "16": "icon-16.png",
+    "32": "icon-32.png",
+    "48": "icon-48.png",
+    "64": "icon-64.png",
+    "128": "icon-128.png",
+    "200": "icon-200.png"
+  },
   "content_security_policy": "script-src 'self'; object-src 'self';",
   "background": {
     "scripts": [
