--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "unstated-next": "^1.1.0"
   },
   "homepage": ".",
   "devDependencies": {
