--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,14 @@ language: node_js
 
 node_js: 10
 
+before_install:
+  - npm i -g codecov
+
 install:
   - npm install
 
 script:
   - CI=true npm run test
+
+after_script:
+  - codecov
