--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.11",
+    "ramda": "^0.26.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
@@ -20,6 +21,7 @@
     "@types/jest": "24.0.13",
     "@types/lodash": "^4.14.134",
     "@types/node": "12.0.8",
+    "@types/ramda": "^0.26.9",
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
     "node-sass": "^4.12.0",
