--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,8 +2,8 @@
   "name": "My Clippings",
   "short_name": "Clippings",
   "description": "Organizing your Kindle Highlight、Bookmark and Notes so easy.",
-  "version": "0.0.3",
-  "version_name": "0.0.3",
+  "version": "0.0.4",
+  "version_name": "0.0.4",
   "manifest_version": 2,
   "author": "Steve Xu",
   "browser_action": {
@@ -14,7 +14,8 @@
   "offline_enabled": true,
   "permissions": [
     "activeTab",
-    "tabs"
+    "tabs",
+    "storage"
   ],
   "icons": {
     "16": "icon-16.png",
