--- a/package.json
+++ b/package.json
@@ -22,8 +22,14 @@
     "@types/ramda": "^0.26.9",
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
+    "husky": "^2.4.1",
     "node-sass": "^4.12.0",
     "typescript": "3.5.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run test"
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
