ci: Add Git Hook

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run test"
+      "pre-push": "CI=true npm run test"
     }
   },
   "eslintConfig": {
