--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   },
   "homepage": ".",
   "devDependencies": {
-    "@types/jest": "24.0.15",
-    "@types/node": "12.0.12",
-    "@types/ramda": "^0.26.15",
-    "@types/react": "16.8.23",
-    "@types/react-dom": "16.8.4",
-    "husky": "^3.0.0",
+    "@types/jest": "^24.0.17",
+    "@types/node": "^12.7.0",
+    "@types/ramda": "^0.26.19",
+    "@types/react": "^16.8.24",
+    "@types/react-dom": "^16.8.5",
+    "husky": "^3.0.2",
     "node-sass": "^4.12.0",
-    "typescript": "3.5.2"
+    "typescript": "^3.5.3"
   },
   "husky": {
     "hooks": {
